
[package]
authors = ["Marcuth <me@marcuth.dev>"]
edition = "2021"
name = "html_parser"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", default-features = false, features = ["napi4", "async"] }
napi-derive = "3.0.0"
scraper = "0.25.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
sxd_html = "0.1.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
